@@ -1,3 +1,9 @@
+2004/04/12 00:05 (-0400) muppetman
+
+	* t/GtkComboBox.t, t/GtkCellLayout.t: hush nastygrams that result
+	from gtk+ not checking for NULL before unreffing the model in
+	combobox's finalizer.
+
 2004/04/11 23:36 (-0400) muppetman
 
 	* t/GdkEvent.t: hush a critical warning that comes from trying to
